--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,22 @@
-# Always normalize line endings
+.dev export-ignore
+.gitdocs export-ignore
+.github export-ignore
+.gitattributes export-ignore
+.gitignore export-ignore
+.travis.yml export-ignore
+.editorconfig export-ignore
+CHANGELOG.md export-ignore
+CITATION.cff export-ignore
+*.todolist export-ignore
+
 * text=auto
+*.* text eol=lf
+
+# GitHub
+.github text
+.gitattributes text
+*.md text
+*.xml text
 
 # Treat these as binary to prevent diff noise
 *.png binary
@@ -19,17 +36,6 @@
 .DS_Store export-ignore
 Thumbs.db export-ignore
 *.log export-ignore
-
-# Dev-related files to ignore in release archives
-.gitattributes export-ignore
-.gitignore export-ignore
-.editorconfig export-ignore
-.github/ export-ignore
-.dev/ export-ignore
-CITATION.cff export-ignore
-README.md export-ignore
-LICENSE.md export-ignore
-*.todolist export-ignore
 
 # Zip release structure help (optional, but useful)
 zip.sh export-ignore
