--- a/.github/workflows/notify-projects.yml
+++ b/.github/workflows/notify-projects.yml
@@ -4,15 +4,12 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - '.dev/**'
-      - '.gitdocs/**'
-      - '.github/**'
-      - '.gitignore'
-      - '.gitattributes'
-      - '.editorconfig'
-      - 'CITATION.cff'
-      - '*.todolist'
+    paths:
+      - 'css/**'
+      - 'fonts/**'
+      - 'img/**'
+      - 'js/**'
+      - 'index.html'
 
 jobs:
   notify:
