--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,9 @@ jobs:
         run: |
           zip -r csk-common-${{ steps.tag.outputs.name }}.zip common
 
+      - name: Wait for ZIP to settle
+        run: sleep 2
+
       - name: Create GitHub Release and Upload ZIP
         uses: softprops/action-gh-release@v2
         with:
