--- a/.editorconfig
+++ b/.editorconfig
@@ -6,15 +6,20 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
-insert_final_newline = true
+insert_final_newline = false
 trim_trailing_whitespace = true
 indent_style = tab
 
+[*.{css,scss,js,ts}]
+insert_final_newline = true
+
 [*.yml]
+insert_final_newline = true
 indent_style = space
 indent_size = 2
 
 [*.md]
+insert_final_newline = true
 trim_trailing_whitespace = false
-[{*.txt,*.dist}]
+[*.{.txt,.dist}]
 end_of_line = crlf
