--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           cp -r img common/
           cp -r js common/
           cp index.html common/
-          cp version.php common/
+          cp version common/
 
       - name: Create ZIP archive
         run: |
