--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,14 @@
-name: Release Package
+name: Release and Dispatch
 
 on:
   push:
     tags:
       - '*'
+      - '!*alpha*'
+      - '!*beta*'
 
 permissions:
-  contents: write # Needed to create a GitHub release
+  contents: write
 
 jobs:
   release:
@@ -14,14 +16,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      # 1. Checkout code
+      - name: 1️⃣ Checkout code
         uses: actions/checkout@v4
 
-      - name: Get tag name
+      # 2. Set up variables
+      - name: 2️⃣ Set up variables
         id: tag
         run: echo "name=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
 
-      - name: Prepare common folder
+      # 3. Prepare ZIP contents
+      - name: 3️⃣ Prepare ZIP contents
         run: |
           mkdir -p common
           cp -r css common/
@@ -31,12 +36,27 @@ jobs:
           cp index.html common/
           cp version common/
 
-      - name: Create ZIP archive
+      # 4. Create ZIP archive
+      - name: 4️⃣ Create ZIP archive
         run: |
           zip -r csk-common-${{ steps.tag.outputs.name }}.zip common
 
-      - name: Create GitHub Release and Upload ZIP
+      # 5. Create GitHub Release and Upload ZIP
+      - name: 5️⃣ Create GitHub Release and Upload ZIP
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ steps.tag.outputs.name }}
           files: csk-common-${{ steps.tag.outputs.name }}.zip
+
+  dispatch:
+    name: Notify Projects
+    runs-on: ubuntu-latest
+    needs: release
+
+    steps:
+      - name: Notify projects of common update
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.CSK_PAT }}
+          repository: ianhubnet/csk-projects
+          event-type: common-update
